[package]
name = "tiny-pinch-common"
version = "0.1.0"
edition = "2021"

[dependencies]
retour = { version = "0.3.1", features = ["static-detour"] }
once_cell = "1.19.0"
windows = { version = "0.58.0", features = ["Win32_System_LibraryLoader"] }

bevy_app = { git = "https://github.com/HazelTheWitch/bevy-tiny-pinch.git", package = "bevy_app", branch = "release-0.14.0" }
bevy_ecs = { git = "https://github.com/HazelTheWitch/bevy-tiny-pinch.git", package = "bevy_ecs", branch = "release-0.14.0" }
bevy_reflect = { git = "https://github.com/HazelTheWitch/bevy-tiny-pinch.git", package = "bevy_reflect", branch = "release-0.14.0" }
