[package]
name = "dump"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1"
ctor = "0.2.8"
bevy_app = "0.14.0"
bevy_ecs = "0.14.0"
bevy_reflect = "0.14.0"
retour = { version = "0.3.1", features = ["static-detour"] }
clap = { version = "4.5.18", features = ["derive"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
windows = { version = "0.58.0", features = ["Win32_System_LibraryLoader"] }
shell-words = "1.1.0"
parking_lot = "0.12.3"
once_cell = "1.19.0"
chrono = "0.4.38"
hxdmp = "0.2.1"
